# het_paxos_ref

./: Cargo.toml  LICENSE.txt  README.md  build.rs
proto/: hetpaxosref.proto  hetpaxosrefconfig.proto
src/: acceptor.rs  crypto.rs  learner.rs  lib.rs  message_properties.rs  parse_config.rs  parse_consensus_message.rs  parsed_message.rs  proposer.rs
tests/: config_tests.rs  crypto_tests.rs
