[package]
name = "het_paxos_ref"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
futures-util = "0.3.17"
prost = "0.9.0"
pbjson = "0.2.0"
pbjson-types = "0.2.0"
rcgen = "0.8.11"
rustls = "0.20.0"
rustls-pemfile = "0.2.1"
serde = "1.0.130"
serde_json = "1.0.68"
sha3 = "0.9.1"
tonic = "0.6.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.8"

[build-dependencies]
pbjson-build = "0.2.0"
tonic-build = "0.6"
